# filter-expr

./: Cargo.toml  LICENSE  README.md
examples/simple-filter-cli/: cli.rs  data.rs  main.rs
src/: filter_expr.rs  lib.rs  logical.rs
src/logical/: bool_operator.rs  context.rs  filter.rs
