[package]
name = "filter-expr"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.95"
bet = "1.0.4"
serde = { version = "1.0.217", optional = true, features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
tap = "1.0.1"
serde = { version = "1.0.217", features = ["derive"] }
